# legal-agent

./: .gitignore  CLAUDE.md  CONTEXT.md  DESIGN.md  PRODUCT.md  TODOS.md  design-mockup.html  entry-tablet-snapshot.md  mobile-session-no-modal.md  mobile-session-snapshot.md  skills-lock.json  wwj-main-design-20260526-223915.md
backend/: .env.example  .gitignore  bench_diarization.py  bench_latency.py  docker-compose.yml  eval_intent.py  main.py  pyproject.toml  test_e2e_playwright.py  test_main.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  98ce04ea5890_add_lawyer_embedding_to_sessions.py  a5f7181a7fc3_suggestion_status_source.py
backend/data/: sessions.db
backend/docs/: code_review_2026-05-31.md
backend/notebooks/: train_intent_router_bert.ipynb
backend/scripts/: debug_deepseek.py  demo_xunfei_rtasr.py  mock_session.py  simulate_realtime.py  simulate_session.py  test.py  train_relevance_bert.py  validate_pipeline.py  validate_pipeline_v2.py  verify_agent.py  verify_funasr_pipeline.py  律师客户对话_1min_xunfei_rtasr.json
backend/src/: agent.py  agno_agents.py  audio_pipeline.py  audio_pipeline_v2.py  audio_pipeline_v3.py  config.py  intent_router.py  voiceprint.py
backend/src/agent/: bus.py  child_tools.py  context_store.py  db.py  events.py  heavy_agent.py  intent_router.py  llm_client.py  orchestrator.py  profile_agent.py  prompts.py  relevance_gate.py  utils.py
backend/src/db/: base.py  engine.py  models.py
backend/src/diarization/: enrollment.py  matcher.py  speaker_change_detector.py  voiceprint.py
backend/src/models/: utterance.py
backend/src/repositories/: profile_entries.py  sessions.py  suggestions.py  utterances.py
backend/src/session/: __init__.py  manager.py  models.py  persistence.py  serializer.py  summary.py
backend/src/stt/: funasr_stream.py  funasr_stream_v2.py
backend/tests/: _instrument.py  conftest.py  e2e_full_pipeline.py  e2e_multi_dialogue.py  e2e_role_aware_dialogue.py  e2e_stability_check.py  generate_report.py  judgment_logger.py  run_logger.py  streaming_fixtures.py  test_agent.py  test_agent_performance.py  test_agno_agents.py  test_agno_db_singleton.py  test_audio_pipeline.py  test_bus.py  test_child_tools.py  test_config_dotenv.py  test_context_store.py  test_enrollment.py  test_funasr_stream_v2.py  test_heavy_agent.py  test_hitl_cleanup.py  test_intent_router.py  test_main.py  test_main_enrollment.py  test_orchestrator.py  test_orchestrator_stale_generation.py  test_profile_agent.py  test_relevance_gate.py  test_relevance_gate_accuracy.py  test_speaker_change_detector.py  test_stt_streaming.py  test_summarize_facts_skill.py  test_voiceprint.py  test_voiceprint_streaming.py  test_ws_enrollment.py  test_xunfei_rtasr_demo.py
backend/tests/agent/: conftest.py  test_context_store_db.py  test_events_schema.py  test_orchestrator_emitter.py
backend/tests/api/: conftest.py  test_history.py
backend/tests/db/: conftest.py  test_engine.py  test_models.py
backend/tests/dialogues/: criminal_theft_long.py  divorce_property_long.py  house_dispute_medium.py  labor_dispute_long.py  labor_probation_short.py  loan_dispute_medium.py  traffic_accident_short.py
backend/tests/fixtures/: 劳动仲裁对话脚本_角色话版.md
backend/tests/reports/: e2e_report_20260529.md  full_pipeline_report_20260529.md  (+1 more)
backend/voiceprints/: demo.npy
(+159 files in other folders)
