[project]
name = "legal-agent-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "python-multipart>=0.0.19",
    "funasr>=1.1.0",
    "modelscope>=1.9.0",
    "soundfile>=0.12.0",
    "agno>=2.6.0",
    "openai>=1.82.0",
    "python-dotenv>=1.1.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "huggingface-hub>=1.16.4",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
markers = [
    "slow: 真实对话场景全流程测试(>1 分钟),按需运行: pytest -m slow",
]
